--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     compile 'com.android.support:design:24.1.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.github.bumptech.glide:glide:3.6.0'
+    compile 'com.android.support:cardview-v7:22.2.0'
+    compile 'com.github.frankiesardo:linearlistview:1.0.1@aar'
 }
