--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sohail.popular_movies">
-<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+<uses-permission android:name="android.permission.INTERNET">
+
+</uses-permission>
 
     <application
         android:allowBackup="true"
@@ -22,7 +24,15 @@
         <activity
             android:name=".DetailActivity"
             android:label="@string/title_activity_detail"
-            ></activity>
+            >
+
+        </activity>
+
+        <provider
+            android:authorities="@string/content_authority"
+            android:name=".data.MovieProvider"
+            android:exported="false" />
+
     </application>
 
 </manifest>
